*Thu Sep 13 2012 Marios Andreou <marios@redhat.com> - 1.0.6
  - major bug in gemspec meant jeweler created circular reference to gem itself
    (described here: https://github.com/technicalpickles/jeweler/issues/188)

*Thu Sep 13 2012 Marios Andreou <marios@redhat.com> - 1.0.5
  - bug fix/feature - adds a check to see if requested service is deployed
    (e.g. set 'service_type' to 'object-store' but swift not deployed
    => 501 Not Implemented)
    https://github.com/ruby-openstack/ruby-openstack/pull/13

*Wed Sep 06 2012 Marios Andreou <marios@redhat.com> - 1.0.4
  - bug fixes: https://github.com/ruby-openstack/ruby-openstack/issues/9,
  - https://github.com/ruby-openstack/ruby-openstack/pull/10

* Fri Aug 24 2012 Marios Andreou <marios@redhat.com> - 1.0.3
  - bugfix - missed case when provider doesn't support security groups (null pointer
    trying to grab non existing key from /server/id response)

* Fri Aug 24 2012 Marios Andreou <marios@redhat.com> - 1.0.2
  - adds support for security_groups api extension
  - fixes labelling of IP addresses - public/private
  - first pass at fixing tests - they run, but aren't complete.

* Fri June 22 2012 Marios Andreou <marios@redhat.com> - 1.0.1 #version bump
  - adds support for api_extensions - keypairs (list/create/delete and include in server instance params)

* Mon June 18 2012 Marios Andreou <marios@redhat.com> - 1.0.0
  - adds key based authentication (ec2 style key/priv. key) - also allows for authtenant_id instead of authtenant/authtenant_name

* Wed May 23 2012 Marios Andreou <marios@redhat.com> - 1.0.0
  - initial checkin of merged code - rackspace/ruby-cloudfiles and rackspace/ruby-openstack-compute